--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Digite 'help' para ver os comandos disponíveis.</pre>
             setTimeout(() => {
               output.innerHTML += "<br>Acesso concedido, guest!";
               setTimeout(() => {
-                window.location.replace('https://www.brcybersec.com/main.html');
+                window.location.replace('https://brcybersec.com/main.html');
               }, 5000);
             }, 500);
           }
