--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://giffiles.alphacoders.com/120/120006.gif') no-repeat center center fixed;
+      background: url('https://imgur.com/sGqItf8.gif') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Courier New', Courier, monospace;
       display: flex;
