--- a/main2.html
+++ b/main2.html
@@ -1,94 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Bruno Rhis</title>
-
-    <link rel="icon" type="png|image" href="assets/IMAGES/sailogo.png">
-    <link rel="stylesheet" href="assets/CSS/style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
+  <meta charset="UTF-8">
+  <meta name="description" content="Portfólio de Bruno Rhis - Consultor de TI, Pentester, Programador e Hacker Ético.">
+  <meta name="keywords" content="Bruno Rhis, Portfólio, Cybersecurity, TI, Pentest, Programador, Hacker Ético">
+  <meta name="author" content="Bruno Rhis">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio | Bruno Rhis</title>
+  <link rel="icon" href="assets/IMAGES/sailogo.png" type="image/png">
+  <!-- Utilizando o tema Cyborg do Bootswatch -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/cyborg/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/CSS/style.css">
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+  <style>
+    /* Estilos customizados com acentos em verde neon (#39ff14) */
+    body {
+      background-color: #000;
+      color: #e6e6e6;
+      font-family: 'Roboto', sans-serif;
+    }
+    header.header {
+      padding: 1rem 2rem;
+      border-bottom: 1px solid #444;
+    }
+    header .logo {
+      font-size: 1.75rem;
+      color: #39ff14;
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+    nav.navbar a {
+      font-size: 1.1rem;
+      color: #e6e6e6;
+      margin: 0 1rem;
+      text-transform: uppercase;
+      transition: color 0.3s;
+    }
+    nav.navbar a:hover,
+    nav.navbar a.active {
+      color: #39ff14;
+    }
+    .home {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      padding: 3rem 1rem;
+      min-height: 80vh;
+    }
+    .home-content, .home-img {
+      flex: 1 1 400px;
+      padding: 1rem;
+    }
+    .home-content h1 {
+      font-size: 3.5rem;
+      margin-bottom: 0.5rem;
+      color: #39ff14;
+    }
+    .home-content h3 {
+      font-size: 1.75rem;
+      margin-bottom: 1rem;
+    }
+    .home-content p {
+      font-size: 1.125rem;
+      line-height: 1.6;
+      margin-bottom: 1.5rem;
+    }
+    .home-sci a {
+      font-size: 1.8rem;
+      margin-right: 1rem;
+      color: #e6e6e6;
+      transition: color 0.3s;
+    }
+    .home-sci a:hover {
+      color: #39ff14;
+    }
+    .home-img {
+      text-align: center;
+    }
+    .home-img img {
+      max-width: 300px;
+      border-radius: 50%;
+      border: 3px solid #39ff14;
+      box-shadow: 0 0 20px #39ff14;
+    }
+    /* Responsividade */
+    @media (max-width: 768px) {
+      .home {
+        flex-direction: column;
+      }
+      header, .home-content, .home-img {
+        text-align: center;
+      }
+      nav.navbar a {
+        margin: 0 0.5rem;
+      }
+    }
+  </style>
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
 <body>
 
-    <header class="header">
-        <a href="#" class="logo">{ Portfolio }</a>
+  <header class="header d-flex justify-content-between align-items-center">
+    <a href="#" class="logo">{ Portfolio }</a>
+    <nav class="navbar">
+      <a href="#home" class="active">Home</a>
+      <a href="assets/Pages/whoami.html">Whoami</a>
+      <a href="assets/Pages/skills.html">Skills</a>
+      <a href="assets/Pages/artigos.html">Artigos</a>
+      <a href="assets/Pages/contato.html">Contato</a>
+    </nav>
+  </header>
 
-        <nav class="navbar">
-            <a href="#home" style="--i:1;" class="active">Home</a>
-            <a href="assets/Pages/whoami.html" style="--i:2;">Whoami</a>
-            <a href="assets/Pages/skills.html" style="--i:3;">Skills</a>
-            <a href="assets/Pages/artigos.html" style="--i:4;">Artigos</a>
-            <a href="assets/Pages/contato.html" style="--i:5;">Contato</a>
-        </nav>
-    </header>
+  <section id="home" class="home">
+    <div class="home-content">
+      <h3>Olá, eu sou</h3>
+      <h1>Bruno Rhis</h1>
+      <h3>e sou <span class="pro-text"></span></h3>
+      <p>
+        Neste portfólio, compartilho minhas conquistas profissionais, ferramentas para testes de penetração e artigos sobre cibersegurança.<br>
+        Espero contribuir e aprender com a comunidade.<br>
+        Let's Hack!
+      </p>
+      <div class="home-sci">
+        <a href="https://github.com/brunorhis" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="https://www.linkedin.com/in/brunorhis/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://discord.gg/gfYw7kfMDU" target="_blank"><i class='bx bxl-discord'></i></a>
+        <a href="https://www.instagram.com/brunorhis/" target="_blank"><i class='bx bxl-instagram'></i></a>
+      </div>
+    </div>
 
-    <section id="home" class="home">
+    <div class="home-img">
+      <img src="assets/IMAGES/mage.png" alt="Bruno Rhis">
+    </div>
+  </section>
 
-        <div class="home-content" data-scroll data-scroll-speed="-5" >
-            <h3 class="mu">Olá , me chamo</h3>
-            <h1>Bruno Rhis</h1>
-            <h3>e eu sou <span class="pro-text">
-                <script>
-                   var typed = new Typed(".pro-text", {
-                      strings: [
-                        "Consultor de TI",
-                        "Pentester",
-                        "Programador",
-                        "Hacker Ético",
-                        "Estudante",
-                        "Entusiasta",
-                      ],
-                      typeSpeed: 100,   
-                      backSpeed: 100,   
-                      backDelay: 1000,  
-                      loop: true        
-                    });
+  <script>
+    // Impede clique direito
+    document.addEventListener('contextmenu', function(e) {
+      e.preventDefault();
+    });
 
-                    document.addEventListener('contextmenu', function(event) {
-                event.preventDefault();
-            });
-
-            input.addEventListener('keydown', function(event) {
-                if (event.key === 'Enter') {
-                    const command = input.value.trim().toLowerCase();
-                    if (command) {
-                        processCommand(command);
-                        input.value = '';
-                    }
-                }
-            });
-                </script>
-            </span></h3>
-            
-            <p>  &emsp; &emsp;Nesse portifólio irei postar minhas realizações profissionais, ferramentas que faço para realizar testes de penetração e artigos sobre coisas que estou estudando.  <br> <br>
-                &emsp; &emsp;Espero contribuir para a comunidade de cibersegurança assim como recebo feedbacks e contribuições de amigos e colegas de área. <br> <br>
-                &emsp; &emsp;Let's Hack!  
-            </p>
-
-            <div class="home-sci">
-                <a href="https://github.com/brunorhis" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="https://www.linkedin.com/in/brunorhis/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://discord.gg/gfYw7kfMDU" target="_blank"><i class='bx bxl-discord'></i></a>
-                <a href="https://www.instagram.com/brunorhis/" target="_blank"><i class='bx bxl-instagram'></i></a>
-            </div>
-           <!--<a href="" class="btn-box" download="resume-bruno.pdf">Download CV</a>-->
-        </div>
-
-        <div class="home-img">
-            <div class="glowing-circle">
-                <span></span>
-                <span></span>
-                <div class="image">
-                    <img src="assets/IMAGES/mage.png" alt="">
-                </div>
-            </div>
-        </div>
-
-    </section>
-
-</body> 
-</html> 
+    // Inicialização do efeito de digitação com Typed.js
+    new Typed(".pro-text", {
+      strings: [
+        "Consultor de TI",
+        "Pentester",
+        "Programador",
+        "Hacker Ético",
+        "Estudante",
+        "Entusiasta"
+      ],
+      typeSpeed: 80,
+      backSpeed: 60,
+      backDelay: 1000,
+      loop: true
+    });
+  </script>
+</body>
+</html>
