--- a/assets/Pages/contato.html
+++ b/assets/Pages/contato.html
@@ -69,7 +69,7 @@
   <section class="content">
     <h1>Contato</h1>
     <div class="contact-info">
-      <p>Email: <a href="mailto:brunorhis@example.com" style="color: #39ff14;">brunorhis@example.com</a></p>
+      <p>Email: <a href="mailto:brunorhis@gmx.com" style="color: #39ff14;">brunorhis@gmx.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/brunorhis/" target="_blank" style="color: #39ff14;">Bruno Rhis</a></p>
       <p>Discord: <a href="https://discord.gg/gfYw7kfMDU" target="_blank" style="color: #39ff14;">gfYw7kfMDU</a></p>
       <p>Instagram: <a href="https://www.instagram.com/brunorhis/" target="_blank" style="color: #39ff14;">@brunorhis</a></p>
