--- a/assets/Pages/skills.html
+++ b/assets/Pages/skills.html
@@ -32,7 +32,7 @@
     <div class="logo">[ Portfolio ]</div>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="../../main.html">Home</a></li>
         <li><a href="whoami.html">Whoami</a></li>
         <li><a href="skills.html" class="active">Skills</a></li>
         <li><a href="artigos.html">Artigos</a></li>
@@ -44,13 +44,8 @@
     <h1>Minhas Habilidades</h1>
     <p>Confira abaixo as principais habilidades e tecnologias com as quais trabalho:</p>
     <ul class="skill-list">
-      <li>Programação em Python, JavaScript e C/C++</li>
-      <li>Testes de Penetração e Auditoria de Segurança</li>
-      <li>Desenvolvimento de Scripts para Automação</li>
-      <li>Conhecimentos em Redes e Protocolos</li>
-      <li>Administração de Sistemas Linux e Windows</li>
-      <li>Ferramentas de Cibersegurança (Nmap, Metasploit, Wireshark, etc.)</li>
-      <li>Consultoria e Análise de Vulnerabilidades</li>
+      <li>Em construção</li>
+      
     </ul>
   </section>
 </body>
