--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Digite 'help' para ver os comandos disponíveis.</pre>
 - clear: Limpa o terminal
 - ls: Lista arquivos
 - pwd: Mostra o diretório atual
-- cat [arquivo]: Mostra o conteúdo do arquivo (file1.txt, file2.txt, script.js, root.txt)
+- cat [arquivo]: Mostra o conteúdo do arquivo
 - site: Executa script de acesso
 - help: Mostra esta lista de comandos\n`;
             break;
