--- a/main.html
+++ b/main.html
@@ -141,7 +141,7 @@
   </header>
   <section id="home" class="hero">
     <div class="hero-text">
-      <h3>Olá, eu sou</h3>
+      <h3>Olá, me chamo</h3>
       <h1>Bruno Rhis</h1>
       <h3>e sou <span class="pro-text"></span></h3>
       <p>
