--- a/assets/Pages/contato.html
+++ b/assets/Pages/contato.html
@@ -45,7 +45,7 @@
     <div class="contact-info">
       <p>Email: <a href="mailto:brunorhis@gmx.com" style="color: #39ff14;">brunorhis@gmx.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/brunorhis/" target="_blank" style="color: #39ff14;">Bruno Rhis</a></p>
-      <p>Discord: <a href="https://discord.gg/gfYw7kfMDU" target="_blank" style="color: #39ff14;">gfYw7kfMDU</a></p>
+      <p>Discord: <a href="https://discord.gg/gfYw7kfMDU" target="_blank" style="color: #39ff14;">Comunidade Clipps</a></p>
       <p>Instagram: <a href="https://www.instagram.com/brunorhis/" target="_blank" style="color: #39ff14;">@brunorhis</a></p>
     </div>
   </section>
