--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -32,7 +32,7 @@
 <body>
   <header>
     <div class="logo">[ Portfolio ]</div>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="../../main.html">Home</a></li>
         <li><a href="whoami.html">Whoami</a></li>
