--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -30,7 +30,7 @@
 <body>
   <header>
     <div class="logo">[ Portfolio ]</div>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="../../main.html">Home</a></li>
         <li><a href="whoami.html" class="active">Whoami</a></li>
