--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -10,24 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background-color: #000; color: #e0e0e0; font-family: 'Orbitron', sans-serif; line-height: 1.6; }
-    header { padding: 20px; border-bottom: 2px solid #39ff14; display: flex; justify-content: space-between; align-items: center; }
-    .logo { font-size: 2rem; font-weight: 700; color: #39ff14; }
-    nav ul { list-style: none; display: flex; gap: 20px; }
-    nav ul li a { font-size: 1rem; transition: color 0.3s; }
-    nav ul li a:hover, nav ul li a.active { color: #39ff14; }
-    .content { padding: 20px; }
     .content h1 { font-size: 3rem; margin-bottom: 20px; color: #39ff14; }
-    .article-list { list-style: none; margin-top: 20px; }
-    .article-list li { margin-bottom: 15px; }
-    .article-list li a { font-size: 1.2rem; color: #e0e0e0; transition: color 0.3s; }
-    .article-list li a:hover { color: #39ff14; }
-    @media (max-width: 768px) {
-      header { flex-direction: column; text-align: center; }
-      nav ul { flex-direction: column; gap: 10px; margin-top: 10px; }
-    }
   </style>
+  <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
   <header>
