--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Whoami | Bruno Rhis</title>
   <link rel="icon" href="../IMAGES/sailogo.png" type="image/png">
+   <style>
+    .content h1 { font-size: 3rem; margin-bottom: 20px; color: #39ff14; }
+  </style>
   
   <!-- Importando fontes e ícones -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
