--- a/assets/Pages/skills.html
+++ b/assets/Pages/skills.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../CSS/style.css">
+   <style>
+    .content h1 { font-size: 3rem; margin-bottom: 20px; color: #39ff14; }
+  </style>
 </head>
 <body>
   <header>
