--- a/wlist.html
+++ b/wlist.html
@@ -105,7 +105,7 @@
 
     <textarea id="output" readonly></textarea>
     
-    <div class="footer">© 2025 - Gerador de Senhas Seguras | Criado por ChatGPT</div>
+    <div class="footer">© 2025 - Gerador de Senhas Seguras | Made with s2 by Bruno </div>
 </div>
 
 <script>
