--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Quem sou eu - Bruno Rhis">
-  <meta name="keywords" content="Bruno Rhis, Whoami, Biografia">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Whoami | Bruno Rhis</title>
-  <link rel="icon" href="../IMAGES/sailogo.png" type="image/png">
-   <style>
-    .content h1 { font-size: 3rem; margin-bottom: 20px; color: #39ff14; }
-  </style>
-  
-  <!-- Importando fontes e ícones -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
-  <!-- Importando o estilo externo -->
-  <link rel="stylesheet" href="../CSS/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Whoami | Bruno Rhis</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">[ Portfolio ]</div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="../../main.html">Home</a></li>
-        <li><a href="whoami.html" class="active">Whoami</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="artigos.html">Artigos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <section class="content">
-    <h1>Quem Sou Eu?</h1>
-    <p></p>
-  </section>
+    <header>
+        <div class="logo">[ Portfolio ]</div>
+        <nav>
+            <ul>
+                <li><a href="../main.html">Home</a></li>
+                <li><a href="whoami.html" class="active">Whoami</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="artigos.html">Artigos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="home">
+        <div class="about-content">
+            <h3>Whoami</h3>
+            <p>
+                Meu nome é <strong>Bruno Rhis</strong>, sou Consultor de TI, Pentester e Programador. Apaixonado por cibersegurança e hacking ético, sempre buscando desafios para expandir meus conhecimentos.
+            </p>
+            <p>
+                Trabalho com segurança ofensiva, testes de intrusão e análise de vulnerabilidades. Minha missão é proteger e fortalecer infraestruturas contra ameaças digitais.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
