--- a/assets/Pages/skills.html
+++ b/assets/Pages/skills.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Minhas Habilidades - Bruno Rhis">
-  <meta name="keywords" content="Bruno Rhis, Skills, Habilidades, Cibersegurança">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Skills | Bruno Rhis</title>
-  <link rel="icon" href="../IMAGES/sailogo.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../CSS/style.css">
-   <style>
-    .content h1 { font-size: 3rem; margin-bottom: 20px; color: #39ff14; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skills | Bruno Rhis</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">[ Portfolio ]</div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="../../main.html">Home</a></li>
-        <li><a href="whoami.html">Whoami</a></li>
-        <li><a href="skills.html" class="active">Skills</a></li>
-        <li><a href="artigos.html">Artigos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="content">
-    <h1>Minhas Habilidades</h1>
-    <p>Confira abaixo as principais habilidades e tecnologias com as quais trabalho:</p>
-    <ul class="skill-list">
-      <li>Em construção</li>
-      
-    </ul>
-  </section>
+    <header>
+        <div class="logo">[ Portfolio ]</div>
+        <nav>
+            <ul>
+                <li><a href="../main.html">Home</a></li>
+                <li><a href="whoami.html">Whoami</a></li>
+                <li><a href="skills.html" class="active">Skills</a></li>
+                <li><a href="artigos.html">Artigos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="home">
+        <div class="about-content">
+            <h3>Minhas Habilidades</h3>
+            <ul>
+                <li>🔹 Testes de Penetração e Segurança Ofensiva</li>
+                <li>🔹 Programação (Python, JavaScript, Bash, PowerShell)</li>
+                <li>🔹 Desenvolvimento Web Seguro</li>
+                <li>🔹 Análise de Vulnerabilidades</li>
+                <li>🔹 Gestão de Incidentes e Resposta a Ameaças</li>
+                <li>🔹 OSINT e Engenharia Social</li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
