--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Artigos e Publicações - Bruno Rhis">
-  <meta name="keywords" content="Bruno Rhis, Artigos, Publicações, Cibersegurança">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Artigos | Bruno Rhis</title>
-  <link rel="icon" href="../IMAGES/sailogo.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-  <style>
-    .content h1 { font-size: 3rem; margin-bottom: 20px; color: #39ff14; }
-  </style>
-  <link rel="stylesheet" href="../CSS/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Artigos | Bruno Rhis</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">[ Portfolio ]</div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="../../main.html">Home</a></li>
-        <li><a href="whoami.html">Whoami</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="artigos.html" class="active">Artigos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="content">
-    <h1>Artigos e Publicações</h1>
-    <p>Aqui você encontrará uma seleção de artigos onde compartilho meus conhecimentos, análises e experiências em cibersegurança e tecnologia.</p>
-    <ul class="article-list">
-      <li><a href="#"></a></li>
-      
-    </ul>
-  </section>
+    <header>
+        <div class="logo">[ Portfolio ]</div>
+        <nav>
+            <ul>
+                <li><a href="../main.html">Home</a></li>
+                <li><a href="whoami.html">Whoami</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="artigos.html" class="active">Artigos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="home">
+        <div class="about-content">
+            <h3>Meus Artigos</h3>
+            <p>Aqui você encontrará artigos sobre cibersegurança, pentest e desenvolvimento seguro.</p>
+            <ul>
+                <li><a href="#">🔹 SQL Injection: Como Explorar e Prevenir</a></li>
+                <li><a href="#">🔹 Introdução ao OSINT: Inteligência de Código Aberto</a></li>
+                <li><a href="#">🔹 Hardening de Servidores: Melhorando a Segurança</a></li>
+                <li><a href="#">🔹 Engenharia Social: Manipulação e Prevenção</a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
