--- a/assets/Pages/contato.html
+++ b/assets/Pages/contato.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Contato - Bruno Rhis">
-  <meta name="keywords" content="Bruno Rhis, Contato, Email, Redes Sociais">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contato | Bruno Rhis</title>
-  <link rel="icon" href="../IMAGES/sailogo.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-  <style>
-    .content h1 { font-size: 3rem; margin-bottom: 20px; color: #39ff14; }
-  </style>
-    <link rel="stylesheet" href="../CSS/style.css">
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato | Bruno Rhis</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">[ Portfolio ]</div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="../../main.html">Home</a></li>
-        <li><a href="whoami.html">Whoami</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="artigos.html">Artigos</a></li>
-        <li><a href="contato.html" class="active">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="content">
-    <h1>Contato</h1>
-    <div class="contact-info">
-      <p>Email: <a href="mailto:brunorhis@gmx.com" style="color: #39ff14;">brunorhis@gmx.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/brunorhis/" target="_blank" style="color: #39ff14;">Bruno Rhis</a></p>
-      <p>Discord: <a href="https://discord.gg/gfYw7kfMDU" target="_blank" style="color: #39ff14;">Comunidade Clipps</a></p>
-      <p>Instagram: <a href="https://www.instagram.com/brunorhis/" target="_blank" style="color: #39ff14;">@brunorhis</a></p>
-    </div>
-  </section>
+    <header>
+        <div class="logo">[ Portfolio ]</div>
+        <nav>
+            <ul>
+                <li><a href="../main.html">Home</a></li>
+                <li><a href="whoami.html">Whoami</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="artigos.html">Artigos</a></li>
+                <li><a href="contato.html" class="active">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="home">
+        <div class="about-content">
+            <h3>Entre em Contato</h3>
+            <p>Para dúvidas, parcerias ou oportunidades, entre em contato comigo pelos seguintes meios:</p>
+            <ul>
+                <li>📧 Email: <a href="mailto:contato@brunorhis.com">contato@brunorhis.com</a></li>
+                <li>💼 LinkedIn: <a href="https://www.linkedin.com/in/brunorhis/" target="_blank">/brunorhis</a></li>
+                <li>🐙 GitHub: <a href="https://github.com/brunorhis" target="_blank">/brunorhis</a></li>
+                <li>💬 Discord: <a href="https://discord.gg/gfYw7kfMDU" target="_blank">Servidor</a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
